macros/tests/ui/entry_bad_ret.stderr
error: `#[entry]` function must have signature `[unsafe] fn([<ident> : CriticalSection]) -> !`
 --> tests/ui/entry_bad_ret.rs:6:1
  |
6 | fn main() {}
  | ^^^^^^^^^
