macros/tests/ui/entry_bad_ret.rs
#![no_main]

use msp430_rt_macros::entry;

#[entry]
fn main() {}
